Archive2/d7/fcd54f5ff96c26/output
main.cpp: In function 'int main()':
main.cpp:17:18: error: 'words' was not declared in this scope
     std::cout << words << std::endl;
                  ^
